# create-react-app-ejected-bazel

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  package.json  tsconfig.json
project/: BUILD.bazel
